# ML-Project-group4

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
agent/: AGENTS.md  TODO.1  TODO.2  TODO.3  TODO.4  TODO.5  TODO.6  TODO.7  TODO.8  TODO.9  plan.md  spec.md
data/: README.md  glossary.json
data/metadata/: videos_metadata.csv
data/rag_docs/: rag_ai_terms.txt  rag_dataset_source_notes.txt  rag_speaker_background.txt  rag_video_topics.txt
data/transcripts_ground_truth/: video_04_ground_truth.txt  video_05_ground_truth.txt  video_06_ground_truth.txt  video_08_ground_truth.txt  video_09_ground_truth.txt
data/transcripts_ground_truth/data/transcripts_ground_truth/: video_02_ground_truth.txt  video_03_ground_truth.txt  video_10_ground_truth.txt
docs/agent/: asr.md  audio.md  export.md  rag.md  repair.md  schema.md  spec.md  visual.md
src/: asr_transcribe.py  audio_extract.py  audio_preprocess.py  cli.py  evidence_merge.py  export.py  frame_sample.py  rag_retrieve.py  schema.py  script_repair.py  vlm_extract.py
src/agent/: asr_transcribe.py  audio_extract.py  audio_preprocess.py  cli.py  evidence_merge.py  export.py  frame_sample.py  rag_retrieve.py  schema.py  script_repair.py  vlm_extract.py
tests/: conftest.py  test_asr_transcribe.py  test_audio_extract.py  test_audio_preprocess.py  test_evidence_merge.py  test_export.py  test_frame_sample.py  test_rag_retrieve.py  test_schema.py  test_script_repair.py  test_vlm_extract.py
(+2 files in other folders)
