[project]
name = "ml-project-group4"
version = "0.1.0"
description = "Video damaged-audio script repair agent using VLM, ASR, and RAG"
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "pydantic>=2.0",
    "whisperx>=3.3.0",
    "rapidfuzz>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[tool.pytest.ini_options]
testpaths = ["tests"]
